# EKF-AWE

./: .gitignore  CITATION.cff  LICENSE  README.md  README_paper.md  cd_kcu.py  config.py  environment.yml  interactive_plots.ipynb  plot_comparison_multiple_sim.py  plot_results.py  plot_results_lidar.py  pyproject.toml  requirements.txt  run_EKF.py  system_properties.py  utils.py  v3_properties.py  v9_properties.py
data/: README.md  process_KFT_data.py  process_KP_data.py
data/config/: kft_config.yaml  v3_config.yaml  v9_config.yaml
data/data_preprocessors/: process_KFT_data.py  process_KP_data.py  process_v3_data.py
docs/: CSV_Input_File_Specifications.md
examples/: identify_aero_parameters_turn_law.py  identify_trim_angle.py  identify_turn_rate  identify_turn_rate.py  kft_config.yaml  plot_2019-10-08.py  plot_2023-11-27.py  plot_2024-03-12.py  plot_2024-06-05.py  plot_analysis.py  plot_ekf_stats.py  plot_kinematics.py  plot_kite_aero.py  plot_kite_orientation.py  plot_kite_trajectory.py  plot_results.py  plot_setup_comparison.py  plot_stall.py  plot_wind_results.py  run_analysis.py  run_analysis_performance_stats.py  run_from_csv.py  run_test_case.py  v3_config.yaml
examples/plots_paper/: plot_2019-10-08.py  plot_2023-11-27.py  plot_2024-03-12.py  plot_2024-06-05.py  plot_steering_2019.py
notebooks/: kite_model.ipynb  tether_model.ipynb
processed_data/: IMU_offset.csv
processed_data/aerostructural/: v3_aero_coeffs_VSM.csv
processed_data/era5_data/: era5_data_2017_03_24.npy  era5_data_2019_10_08.npy  era5_data_2021_10_07.npy
src/: config.py  find_offsets.py  kalman_filter.py  model_definitions.py  pearson_correlation.py  plot_results.py  plot_results_lidar.py  plot_results_new.py  plot_utils.py  plot_validation_aerocoeffs.py  postprocess_results.py  postprocessing.py  run_EKF.py  run_from_csv.py  tether_model.py  turn_law.py  utils.py
src/awes_ekf/: kcu.py  kite.py  plot_results.py  run_EKF.py  run_from_csv.py  tether.py  utils.py  v3_config.yaml  v9_config.yaml
src/awes_ekf/ekf/: __init__.py  dynamic_model.py  ekf_input.py  (+4 more)
tests/test_utils/: test_euler_reference_frame.py  test_rotations.py  test_utils.py
(+23 files in other folders)
