[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awes_ekf"
version = "1.0.0"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "Oriol Cayon", email = "o.cayon@tudelft.nl" }]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "matplotlib",
    "casadi>3.6.0",
    "pandas",
    "pytest",
    "pyyaml",
    "control",
    "scipy",
]