[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Use flit to build your project if setuptools not working
# requires = ["flit>=3.4", "wheel"]
# build-backend = "flit_core.buildapi"

[project]
name = "awes_ekf"
version = "1.0.0"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "Oriol Cayon", email = "o.cayon@tudelft.nl" }]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "matplotlib",
    "casadi>3.6.0",
    "pandas",
    "pytest",
    "pyyaml",
    "control",
    "scipy",
    "seaborn",
    "dataclasses",
    "h5py",
]